# Elemental

./: CMakeLists.txt  Hydrogen_ReleaseNotes.txt  TODO  configure_hydrogen_cuda.csh
include/El/: CMakeLists.txt  core.hpp  io.hpp  matrices.hpp
include/El/blas_like/: CMakeLists.txt  level2.hpp  level3.hpp
include/El/blas_like/level1/: AllReduce.hpp  Axpy.hpp  AxpyContract.hpp  AxpyTrapezoid.hpp  Broadcast.hpp  CMakeLists.txt  Concatenate.hpp  Conjugate.hpp  ConjugateDiagonal.hpp  Contract.hpp  Copy.hpp  DiagonalScale.hpp  DiagonalScaleTrapezoid.hpp  DiagonalSolve.hpp  Dot.hpp  EntrywiseFill.hpp  EntrywiseMap.hpp  Fill.hpp  GetDiagonal.hpp  GetMappedDiagonal.hpp  GetSubmatrix.hpp  Hadamard.hpp  IndexDependentMap.hpp  Kronecker.hpp  MakeDiagonalReal.hpp  MakeReal.hpp  MakeSymmetric.hpp  MakeTrapezoidal.hpp  Nrm2.hpp  Recv.hpp  Reshape.hpp  Round.hpp  SafeScale.hpp  Scale.hpp  ScaleTrapezoid.hpp  Send.hpp  SendRecv.hpp  SetDiagonal.hpp  SetSubmatrix.hpp  Shift.hpp  (+9 more)
include/El/core/: AbstractMatrix.hpp  CMakeLists.txt  CReflect.hpp  Device.hpp  DistMatrix.hpp  IndexSequence.hpp  Proxy.hpp  ProxyDevice.hpp  Serialize.hpp  SimpleBuffer.hpp  SparseMatrix.h  SyncInfo.hpp  limits.hpp  types.hpp
include/El/core/DistGraph/: CMakeLists.txt
include/El/core/DistMatrix/: Abstract.hpp  Block.hpp  CMakeLists.txt  Element.hpp
include/El/core/DistMultiVec/: CMakeLists.txt
include/El/core/Element/: CMakeLists.txt  decl.hpp
include/El/core/FlamePart/: CMakeLists.txt
include/El/core/Graph/: CMakeLists.txt
include/El/core/Matrix/: CMakeLists.txt  decl.hpp  impl.hpp  impl_cpu.hpp  impl_gpu.hpp
include/El/core/Memory/: decl.hpp  impl.hpp
include/El/core/SparseMatrix/: decl.hpp  impl.hpp
include/El/core/View/: decl.hpp  impl.hpp
include/El/core/environment/: decl.hpp  impl.hpp
include/El/core/imports/: CMakeLists.txt  aluminum.hpp  blas.hpp  cub.hpp  cublas.hpp  cuda.hpp  lapack.hpp  mkl.hpp  mpfr.hpp  mpi.hpp  omp.hpp  qd.hpp
include/El/core/indexing/: CMakeLists.txt  decl.hpp  impl.hpp
include/El/core/random/: decl.hpp
include/El/hydrogen/: CMakeLists.txt  base.hpp  hydrogen.hpp
include/El/io/: CMakeLists.txt
include/El/lapack_like/: CMakeLists.txt  equilibrate.hpp  euclidean_min.hpp  factor.hpp  props.hpp  solve.hpp  spectral.hpp  util.hpp
include/El/lapack_like/condense/: CMakeLists.txt
include/El/lapack_like/factor/: CMakeLists.txt
include/El/lapack_like/props/: CMakeLists.txt
include/El/lapack_like/solve/: CMakeLists.txt  FGMRES.hpp  LGMRES.hpp  Refined.hpp
include/El/lapack_like/spectral/: CMakeLists.txt  Lanczos.hpp  ProductLanczos.hpp  Schur.hpp
include/El/macros/: CMakeLists.txt  DeviceGuardAndPayload.h  GuardAndPayload.h  Instantiate.h
include/El/matrices/: CMakeLists.txt
include/El/matrices/deterministic/: CMakeLists.txt
src/: CMakeLists.txt
src/blas_like/: CMakeLists.txt
src/blas_like/level1/: CMakeLists.txt  ColumnMinAbs.cpp  ColumnNorms.cpp  HilbertSchmidt.cpp  Max.cpp  MaxAbs.cpp  MaxAbsLoc.cpp  MaxLoc.cpp  Min.cpp  MinAbsLoc.cpp  MinLoc.cpp  NormsFromScaledSquares.hpp  RowMinAbs.cpp  RowNorms.cpp
src/blas_like/level1/GPU/: AllReduce.cu  Axpy.cu  BasicInterleaveMatrix.cu  CMakeLists.txt  Copy.cu  Fill.cu  Hadamard.cu  Scale.cu  Transpose.cu
src/blas_like/level2/: CMakeLists.txt  Gemv.cpp
src/blas_like/level2/Gemv/: CMakeLists.txt  Normal.hpp  Transpose.hpp
src/blas_like/level2/Symv/: CMakeLists.txt
src/blas_like/level2/Trsv/: CMakeLists.txt
src/blas_like/level3/: CMakeLists.txt  Gemm.cpp  Herk.cpp  Multiply.cpp  Syrk.cpp  Trrk.cpp  Trsm.cpp
src/blas_like/level3/Gemm/: CMakeLists.txt  NN.hpp  NT.hpp  TN.hpp  TT.hpp
src/blas_like/level3/MultiShiftQuasiTrsm/: CMakeLists.txt  LUN.hpp
src/blas_like/level3/MultiShiftTrsm/: CMakeLists.txt
src/blas_like/level3/QuasiTrsm/: CMakeLists.txt
src/blas_like/level3/SafeMultiShiftTrsm/: CMakeLists.txt
src/blas_like/level3/Symm/: CMakeLists.txt
src/blas_like/level3/Syrk/: CMakeLists.txt
src/blas_like/level3/Trmm/: CMakeLists.txt
src/blas_like/level3/Trr2k/: CMakeLists.txt
src/blas_like/level3/Trrk/: CMakeLists.txt
src/blas_like/level3/Trsm/: CMakeLists.txt
src/control/: CMakeLists.txt
src/core/: CMakeLists.txt  DistMap.cpp  Element.cpp  Grid.cpp  Serialize.cpp  SparseMatrix-C.cpp  callStack.cpp  environment.cpp  mpi_register.cpp  random.cpp  types.cpp
src/core/DistMatrix/: Abstract.cpp  Block.cpp  CMakeLists.txt  Element.cpp
src/core/FlamePart/: CMakeLists.txt
src/core/imports/: CMakeLists.txt  cub.cpp  cublas.cpp  cuda.cpp  lapack.cpp  mkl.cpp  mpfr.cpp  mpi.cpp  mpi_collectives.hpp  mpi_utils.hpp  qd.cpp
src/hydrogen/: CMakeLists.txt  hydrogen.cpp
src/io/: CMakeLists.txt  Display.cpp  Print.cpp  Read.cpp  Write.cpp
src/io/Read/: Ascii.hpp  CMakeLists.txt  MatrixMarket.hpp
src/io/Write/: CMakeLists.txt  MatrixMarket.hpp
src/lapack_like/: CMakeLists.txt
src/lapack_like/condense/: CMakeLists.txt
src/lapack_like/equilibrate/: CMakeLists.txt  GeomEquil.cpp  RuizEquil.cpp  SymmetricDiagonalEquil.cpp  SymmetricGeomEquil.cpp  SymmetricRuizEquil.cpp  Util.hpp
src/lapack_like/euclidean_min/: CMakeLists.txt  GLM.cpp  LSE.cpp  LeastSquares.cpp  Ridge.cpp  Tikhonov.cpp
src/lapack_like/factor/: CMakeLists.txt
src/lapack_like/funcs/: CMakeLists.txt
src/lapack_like/perm/: CMakeLists.txt  DistPermutation.cpp  PermutationMeta.cpp
src/lapack_like/props/: CMakeLists.txt
src/lapack_like/reflect/: CMakeLists.txt
src/lapack_like/solve/: CMakeLists.txt  HPD.cpp  Hermitian.cpp  Linear.cpp  SQSD.cpp  Symmetric.cpp
src/lapack_like/spectral/: CMakeLists.txt  HessenbergSchur.cpp  QuasiTriangEig.cpp  SecularEVD.cpp  SecularSVD.cpp
src/lapack_like/util/: CMakeLists.txt
src/matrices/: CMakeLists.txt
src/matrices/deterministic/: CMakeLists.txt
src/matrices/random/: CMakeLists.txt
tests/: CMakeLists.txt
tests/blas_like/: Axpy.cpp  BasicGemm.cpp  CMakeLists.txt  ColumnNorms.cpp  Dot.cpp  Gemm.cpp  Gemv.cpp
tests/core/: CMakeLists.txt  DistMatrix.cpp
tests/lapack_like/: BidiagDCSVD.cpp  CMakeLists.txt  TriangEig.cpp
(+244 files in other folders)
